# wordle-gpu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
src/: CMakeLists.txt  clue.cpp  clue.h  constants.h  guesses.txt  host_device_buffer.h  main.cpp  solutions.txt  state.cpp  state.h  utilities.h
util/: generate_constants.sh
